fix: dark mode color not applied for before / after elements

--- a/assets/css/components/steps.css
+++ b/assets/css/components/steps.css
@@ -2,11 +2,12 @@
   :where(h2, h3, h4, h5, h6):not(.no-step-marker) {
     counter-increment: step;
     @apply hx:ltr:before:ml-[-41px] hx:rtl:before:mr-[-44px];
+    /* https://github.com/tailwindlabs/tailwindcss/issues/15597#issuecomment-2582673546 */
+    @apply hx:before:bg-gray-100 hx:dark:before:bg-neutral-800;
+    @apply hx:before:border-4 hx:before:border-white hx:dark:before:border-dark;
     &:before {
       content: counter(step);
       @apply hx:absolute hx:size-[33px];
-      @apply hx:border-4 hx:border-white hx:dark:border-dark;
-      @apply hx:bg-gray-100 hx:dark:bg-neutral-800;
       @apply hx:rounded-full hx:text-neutral-400 hx:text-base hx:font-normal hx:text-center hx:-indent-px;
     }
   }
